--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,32 @@
-.navbar {
-  background-image:
-  linear-gradient(rgba(255,255,255,0.3),rgba(255,255,255,0.3)), 
-  url('../images/cattle.JPG');
-  background-attachment: fixed;
-  background-position: auto,center top;}
-
-  .navbar {
-  background-color: transparent !important;
-  z-index: 900;
-  position: fixed;
+.navbar-toggle {
+  float: left !important;
+  margin-left: 15px;
+  margin-right: 0;
 }
 
+.modal-nav-content {
+  width: 100%;
+  height: auto;
+}
+
+.modal-nav-body {
+  margin-top: 100px; 
+}
+
+.modal-nav-body ul {
+  list-style-type: none;
+  color: white;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.modal-nav-body ul li {
+  text-align: center;
+  font-size: 130%;
+  padding: 8px;
+  text-transform: uppercase;
+}
 body {
   font: 14px/2 "Open sans", sans-serif;
   letter-spacing: 0.05em;
