--- a/css/style.css
+++ b/css/style.css
@@ -1,637 +1,121 @@
-.navbar-toggle {
-  float: left !important;
-  margin-left: 15px;
-  margin-right: 0;
-}
-
-.modal-nav-content {
-  width: 100%;
-  height: auto;
-}
-
-.modal-nav-body {
-  margin-top: 100px; 
-}
-
-.modal-nav-body ul {
-  list-style-type: none;
-  color: white;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-.modal-nav-body ul li {
-  text-align: center;
-  font-size: 130%;
-  padding: 8px;
-  text-transform: uppercase;
-}
 body {
-  font: 14px/2 "Open sans", sans-serif;
-  letter-spacing: 0.05em;
+  font-size: 14px;
+  font-family: Sans-Serif;
 }
-
-.btn {
-  display: inline-block;
-  padding: 13px 20px;
-  color: #fff;
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+a {
   text-decoration: none;
-  position: relative;
-  background: transparent;
-  border: 1px solid #e1e1e1;
-  font: 12px/1.2 "Oswald", sans-serif;
-  letter-spacing: 0.4em;
-  text-align: center;
-  text-indent: 2px;
-  text-transform: uppercase;
-  transition: color 0.1s linear 0.05s;
 }
-.btn::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: #e1e1e1;
-  z-index: 1;
-  opacity: 0;
-  transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0.2s;
-}
-.btn::after {
-  transition: border 0.1s linear 0.05s;
-}
-.btn .btn-inner {
-  position: relative;
-  z-index: 2;
-}
-.btn:hover {
-  color: #373737;
-  transition: color 0.1s linear 0s;
-}
-.btn:hover::before {
-  top: 0;
-  height: 100%;
-  opacity: 1;
-  transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s;
-}
-.btn:hover::after {
-  border-color: #373737;
-  transition: border 0.1s linear 0s;
-}
-
-.slideshow {
-  overflow: hidden;
+.blurImg {
   position: relative;
   width: 100%;
-  height: 100vh;
-  z-index: 1;
-}
-.slideshow .slideshow-inner {
-  position: absolute;
+  height: 440px;
+  z-index: -1;
   top: 0;
   left: 0;
+}
+.blurImg > div {
+  position: fixed;
   width: 100%;
-  height: 100%;
-}
-.slideshow .slides {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-}
-.slideshow .slide {
-  display: none;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-.slideshow .slide.is-active {
-  display: block;
-}
-.slideshow .slide.is-loaded {
-  opacity: 1;
-}
-.slideshow .slide .caption {
-  padding: 0 100px;
-}
-.slideshow .slide .image-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  z-index: 1;
+  height: 440px;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
   background-size: cover;
-  image-rendering: optimizeQuality;
+  background-position: center center;
 }
-.slideshow .slide .image-container::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+.blur {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
 }
-.slideshow .slide .image {
-  width: 100%;
-  width: 100%;
-  object-fit: cover;
-  height: 100%;
-}
-.slideshow .slide-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  color: #fff;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slideshow .slide .title {
-  margin: 0 auto 15px;
-  max-width: 1000px;
-  font: 300 50px/1.2 "Oswald", sans-serif;
-  letter-spacing: 0.35em;
-  text-transform: uppercase;
-}
-.slideshow .slide .text {
-  margin: 0 auto;
-  max-width: 1000px;
-  font-size: 18px;
-  line-height: 1.4;
-}
-.slideshow .slide .btn {
-  margin: 15px 0 0;
-  border-color: #fff;
-}
-.slideshow .slide .btn::before {
-  background: #fff;
-}
-.slideshow .pagination {
-  position: absolute;
-  bottom: 35px;
-  left: 0;
-  width: 100%;
-  height: 12px;
-  cursor: default;
-  z-index: 2;
-  text-align: center;
-}
-.slideshow .pagination .item {
-  display: inline-block;
-  padding: 15px 5px;
-  position: relative;
-  width: 46px;
-  height: 32px;
-  cursor: pointer;
-  text-indent: -999em;
+header {
   z-index: 1;
-}
-.slideshow .pagination .item + .page {
-  margin-left: -2px;
-}
-.slideshow .pagination .item::before {
-  content: "";
-  display: block;
   position: absolute;
-  top: 15px;
-  left: 5px;
-  width: 36px;
-  height: 2px;
-  background: rgba(255, 255, 255, 0.5);
-  transition: background 0.2s ease;
-}
-.slideshow .pagination .item::after {
-  width: 0;
-  background: #fff;
-  z-index: 2;
-  transition: width 0.2s ease;
-}
-.slideshow .pagination .item:hover::before, .slideshow .pagination .item.is-active::before {
-  background-color: #fff;
-}
-.slideshow .arrows .arrow {
-  margin: -33px 0 0;
-  padding: 20px;
-  position: absolute;
-  top: 50%;
-  cursor: pointer;
-  z-index: 3;
-}
-.slideshow .arrows .prev {
-  left: 30px;
-}
-.slideshow .arrows .prev:hover .svg {
-  left: -10px;
-}
-.slideshow .arrows .next {
-  right: 30px;
-}
-.slideshow .arrows .next:hover .svg {
-  left: 10px;
-}
-.slideshow .arrows .svg {
-  position: relative;
-  left: 0;
-  width: 14px;
-  height: 26px;
-  fill: #fff;
-  transition: left 0.2s ease;
-}
-
-div.container
-{
-    font-family: Raleway;
-    margin: 0 auto;
-	padding: 10em 3em;
-	text-align: center;
-}
-
-div.container a
-{
-    color: #FFF;
-    text-decoration: none;
-    font: 20px Raleway;
-    margin: 0px 10px;
-    padding: 10px 10px;
-    position: relative;
-    z-index: 0;
-    cursor: pointer;
-}
-
-.red
-{
-    background: #f44336;
-}
-
-/* Top and Bottom borders go out */
-div.topBotomBordersOut a:before, div.topBotomBordersOut a:after
-{
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: #FFF;
-    content: "";
-    opacity: 0;
-    transition: all 0.3s;
-}
-
-div.topBotomBordersOut a:before
-{
-    top: 0px;
-    transform: translateY(10px);
-}
-
-div.topBotomBordersOut a:after
-{
-    bottom: 0px;
-    transform: translateY(-10px);
-}
-
-div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after
-{
-    opacity: 1;
-    transform: translateY(0px);
-}
-
-/* Top and Bottom borders come in */
-div.topBotomBordersIn a:before, div.topBotomBordersIn a:after
-{
-    position: absolute;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: #FFF;
-    content: "";
-    opacity: 0;
-    transition: all 0.3s;
-}
-
-div.topBotomBordersIn a:before
-{
-    top: 0px;
-    transform: translateY(-10px);
-}
-
-div.topBotomBordersIn a:after
-{
-    bottom: 0px;
-    transform: translateY(10px);
-}
-
-div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
-{
-    opacity: 1;
-    transform: translateY(0px);
-}
-
-/* Top border go down and Left border appears */
-div.topLeftBorders a:before
-{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 2px;
-    height: 0px;
-    background: #FFF;
-    content: "";
-    opacity: 1;
-    transition: all 0.3s;
-}
-
-div.topLeftBorders a:after
-{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background: #FFF;
-    content: "";
-    opacity: 1;
-    transition: all 0.3s;
-}
-
-div.topLeftBorders a:hover:before
-{
-    height: 100%;
-}
-
-div.topLeftBorders a:hover:after
-{
-    opacity: 0;
-    top: 100%;
-}
-body {
-  font: 14px/2 "Open sans",sans-serif;
-  letter-spacing: 0.05em;
-}
-
-.btn {
-  display: inline-block;
-  padding: 13px 20px;
-  color: #fff;
-  text-decoration: none;
-  position: relative;
-  background: transparent; 
-  border: 1px solid #e1e1e1;
-  font: 12px/1.2 "Oswald", sans-serif;
-  letter-spacing: 0.4em;
-  text-align: center;
-  text-indent: 2px;
-  text-transform: uppercase;
-  transition: color 0.1s linear 0.05s;}
-
-  ::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: #e1e1e1;
-    z-index: 1;
-    opacity: 0;
-    transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0.2s;
-  }
-
-  ::after {
-    transition:border 0.1s linear 0.05s;
-  }
-
-  .btn-inner {
-    position: relative;
-    z-index: 2;
-  }
-
-  :hover {
-    color: #373737;
-    transition: color 0.1s linear 0s;}
-
-    ::before {
-      top: 0;
-      height: 100%;
-      opacity: 1;
-      transition: height 0.2s ease, top 0.2s ease, opacity 0s linear 0s;
-    }
-
-    ::after {
-      border-color: #373737;
-      transition:border 0.1s linear 0s;
-    }
-
-
-.slideshow { 
-  overflow: hidden;
-  position: relative;
+  top: 0;
   width: 100%;
-  height: 100vh;
-  z-index: 1;}
-
-  .slideshow-inner { 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .slides { 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-
-  .slide { 
-    display: none;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: opacity 0.3s ease;}
-
-    .is-active {
-      display: block;
-    }
-
-    .is-loaded{
-      opacity: 1;
-    }
-
-    .caption { 
-      padding: 0 100px;
-    }
-
-    .image-container { 
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-position: center;
-      z-index: 1;
-      background-size: cover;
-      image-rendering: optimizeQuality;}
-
-      ::before { 
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.5);
-      }
-    
-
-    .image {
-      width: 100%;
-      width: 100%;
-      object-fit: cover;
-      height: 100%;
-    }
-
-    .content {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 2;
-      color: #fff;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .title { 
-      margin: 0 auto 15px;
-      max-width: 1000px;
-      font: 300 50px/1.2 "Oswald", sans-serif;
-      letter-spacing: 0.35em;
-      text-transform: uppercase;
-    }
-
-    .text {
-      margin: 0 auto;
-      max-width: 1000px;
-      font-size: 18px;
-      line-height: 1.4;
-    }
-
-    .btn {
-      margin: 15px 0 0;
-      border-color: #fff;}
-
-      ::before {
-        background:#fff
-      }
- 
-
-  .pagination { 
-    position: absolute;
-    bottom: 35px;
-    left: 0;
-    width: 100%;
-    height: 12px;
-    cursor: default;
-    z-index: 2;
-    text-align: center;}
-
-    .item { 
-      display: inline-block;
-      padding: 15px 5px;
-      position: relative;
-      width: 46px;
-      height: 32px;
-      cursor: pointer;
-      text-indent: -999em;
-      z-index: 1;}
-
-       .page {
-        margin-left: -2px;
-      }
-
-      ::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 15px;
-        left: 5px;
-        width: 36px;
-        height: 2px;
-        background: rgba(255, 255, 255, 0.5);
-        transition: background 0.2s ease;
-      }
-
-      ::after {
-        width: 0;
-        background: #fff;
-        z-index: 2;
-        transition: width 0.2s ease;
-      }
-
-      :hover::before,
-      .is-active::before {
-        background-color: #fff;
-      }
-  
-
-  .arrows 
-    .arrow {
-      margin: -33px 0 0;padding: 20px;position: absolute;top: 50%;cursor: pointer;z-index: 3;
-    }
-
-    .prev {
-      left: 30px;}
-
-      :hover .svg {
-        left: -10px;
-      }
-    
-    .next :hover .svg {
-      right: 30px;
-
-     
-        left: 10px;
-      }
-
-
-    .svg {
-      position: relative;
-      left: 0;
-      width: 14px;
-      height: 26px;
-      fill: #fff;
-      transition: left 0.2s ease;
-    }
-
+  padding: 0px 20px;
+}
+header > div {
+  max-width: 600px;
+  margin: 0 auto;
+  padding-top: 150px;
+  height: 380px;
+  text-align: center;
+  color: White;
+}
+header > div a {
+  font-size: 0.8em;
+  letter-spacing: 0.08em;
+  color: rgba(255,255,255,0.85);
+  line-height: 30px;
+  padding: 7px 14px;
+  border: 1px solid rgba(255,255,255,0.3);
+  border-radius: 2em;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+header > div a:hover {
+  background: #fff;
+  color: Gray;
+}
+header p {
+  font-size: 1.5em;
+  margin-bottom: 0.7em;
+  font-family: Times New Roman;
+}
+h1 {
+  font-weight: 800;
+  font-size: 3.4em;
+  margin-bottom: 0.2em;
+}
+nav {
+  max-width: 600px;
+  margin: 0 auto;
+  height: 60px;
+  border-top: 1px rgba(255,255,255,0.35) solid;
+}
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+nav ul li a {
+  font-weight: 800;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: rgba(255,255,255,0.5);
+  -webkit-transition: color 0.3s linear;
+  -moz-transition: color 0.3s linear;
+  -o-transition: color 0.3s linear;
+  -ms-transition: color 0.3s linear;
+  transition: color 0.3s linear;
+  line-height: 60px;
+  display: block;
+}
+nav ul li a.active {
+  -webkit-box-shadow: 0px -1px 0px #fff;
+  box-shadow: 0px -1px 0px #fff;
+}
+nav ul li a.active,
+nav ul li a:hover {
+  color: #fff;
+}
+.container {
+  height: 1300px;
+  background: #fff;
+  z-index: 1;
+  padding: 0px 20px;
+}
+.container div {
+  max-width: 600px;
+  margin: 0 auto;
+  padding-top: 40px;
+}
