--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,508 @@
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
 body {
-  font-size: 14px;
-  font-family: Sans-Serif;
+  margin: 0;
+}
+/* 
+- Name: megamenu.js - style.css
+- Version: 1.0
+- Latest update: 29.01.2016.
+- Author: Mario Loncarek
+- Author web site: http://marioloncarek.com
+*/
+/* ––––––––––––––––––––––––––––––––––––––––––––––––––
+Body - not related to megamenu
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+body {
+  font-family: 'Source Sans Pro', sans-serif;
 }
 * {
+  box-sizing: border-box;
+}
+a {
+  color: #333;
+}
+.description {
+  width: 80%;
+  margin: 50px auto;
+}
+/* ––––––––––––––––––––––––––––––––––––––––––––––––––
+megamenu.js STYLE STARTS HERE
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* ––––––––––––––––––––––––––––––––––––––––––––––––––
+Screen style's
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+.menu-container {
+  width: 100%;
+  margin: 0 auto;
+  background: transparent;
+  
+}
+.menu .menu-container ul {
+    float: right;
+}
+
+.menu-mobile {
+  display: none;
+  padding: 20px;
+}
+.menu-mobile:after {
+  content: "\f394";
+  font-family: "Ionicons";
+  font-size: 2.5rem;
+  padding: 0;
+  float: right;
+  position: relative;
+  top: 50%;
+  transform: translateY(-25%);
+}
+.menu-dropdown-icon:before {
+  content: "\f489";
+  font-family: "Ionicons";
+  display: none;
+  cursor: pointer;
+  float: right;
+  padding: 1.5em 2em;
+  background: #fff;
+  color: #333;
+}
+.menu > ul {
+  margin: 0 auto;
+  width: 100%;
+  list-style: none;
+  padding: 0;
+  position: relative;
+  /* IF .menu position=relative -> ul = container width, ELSE ul = 100% width */
+
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-a {
+.menu > ul:before,
+.menu > ul:after {
+  content: "";
+  display: table;
+}
+.menu > ul:after {
+  clear: both;
+}
+.menu > ul > li {
+  float: right;
+  background: #e9e9e9;
+  padding: 0;
+  margin: 0;
+}
+.menu > ul > li a {
   text-decoration: none;
-}
-.blurImg {
-  position: relative;
-  width: 100%;
-  height: 440px;
-  z-index: -1;
-  top: 0;
-  left: 0;
-}
-.blurImg > div {
-  position: fixed;
-  width: 100%;
-  height: 440px;
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  background-position: center center;
-}
-.blur {
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
-}
-header {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 0px 20px;
-}
-header > div {
-  max-width: 600px;
-  margin: 0 auto;
-  padding-top: 150px;
-  height: 380px;
-  text-align: center;
-  color: White;
-}
-header > div a {
-  font-size: 0.8em;
-  letter-spacing: 0.08em;
-  color: rgba(255,255,255,0.85);
-  line-height: 30px;
-  padding: 7px 14px;
-  border: 1px solid rgba(255,255,255,0.3);
-  border-radius: 2em;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-header > div a:hover {
-  background: #fff;
-  color: Gray;
-}
-header p {
-  font-size: 1.5em;
-  margin-bottom: 0.7em;
-  font-family: Times New Roman;
-}
-h1 {
-  font-weight: 800;
-  font-size: 3.4em;
-  margin-bottom: 0.2em;
-}
-nav {
-  max-width: 600px;
-  margin: 0 auto;
-  height: 60px;
-  border-top: 1px rgba(255,255,255,0.35) solid;
-}
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-nav ul li a {
-  font-weight: 800;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: rgba(255,255,255,0.5);
-  -webkit-transition: color 0.3s linear;
-  -moz-transition: color 0.3s linear;
-  -o-transition: color 0.3s linear;
-  -ms-transition: color 0.3s linear;
-  transition: color 0.3s linear;
-  line-height: 60px;
+  padding: 1.5em 3em;
   display: block;
 }
-nav ul li a.active {
-  -webkit-box-shadow: 0px -1px 0px #fff;
-  box-shadow: 0px -1px 0px #fff;
+.menu > ul > li:hover {
+  background: #f0f0f0;
 }
-nav ul li a.active,
-nav ul li a:hover {
-  color: #fff;
+.menu > ul > li > ul {
+  display: none;
+  width: 100%;
+  background: #f0f0f0;
+  padding: 20px;
+  position: absolute;
+  z-index: 99;
+  left: 0;
+  margin: 0;
+  list-style: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-.container {
-  height: 1300px;
-  background: #fff;
+.menu > ul > li > ul:before,
+.menu > ul > li > ul:after {
+  content: "";
+  display: table;
+}
+.menu > ul > li > ul:after {
+  clear: both;
+}
+.menu > ul > li > ul > li {
+  margin: 0;
+  padding-bottom: 0;
+  list-style: none;
+  width: 25%;
+  background: none;
+  float: left;
+}
+.menu > ul > li > ul > li a {
+  color: #777;
+  padding: .2em 0;
+  width: 95%;
+  display: block;
+  border-bottom: 1px solid #ccc;
+}
+.menu > ul > li > ul > li > ul {
+  display: block;
+  padding: 0;
+  margin: 10px 0 0;
+  list-style: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.menu > ul > li > ul > li > ul:before,
+.menu > ul > li > ul > li > ul:after {
+  content: "";
+  display: table;
+}
+.menu > ul > li > ul > li > ul:after {
+  clear: both;
+}
+.menu > ul > li > ul > li > ul > li {
+  float: left;
+  width: 100%;
+  padding: 10px 0;
+  margin: 0;
+  font-size: .8em;
+}
+.menu > ul > li > ul > li > ul > li a {
+  border: 0;
+}
+.menu > ul > li > ul.normal-sub {
+  width: 300px;
+  left: auto;
+  padding: 10px 20px;
+}
+.menu > ul > li > ul.normal-sub > li {
+  width: 100%;
+}
+.menu > ul > li > ul.normal-sub > li a {
+  border: 0;
+  padding: 1em 0;
+}
+/* ––––––––––––––––––––––––––––––––––––––––––––––––––
+Mobile style's
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media only screen and (max-width: 959px) {
+  .menu-container {
+    width: 100%;
+  }
+  .menu-mobile {
+    display: block;
+  }
+  .menu-dropdown-icon:before {
+    display: block;
+  }
+  .menu > ul {
+    display: none;
+  }
+  .menu > ul > li {
+    width: 100%;
+    float: none;
+    display: block;
+  }
+  .menu > ul > li a {
+    padding: 1.5em;
+    width: 100%;
+    display: block;
+  }
+  .menu > ul > li > ul {
+    position: relative;
+  }
+  .menu > ul > li > ul.normal-sub {
+    width: 100%;
+  }
+  .menu > ul > li > ul > li {
+    float: none;
+    width: 100%;
+    margin-top: 20px;
+  }
+  .menu > ul > li > ul > li:first-child {
+    margin: 0;
+  }
+  .menu > ul > li > ul > li > ul {
+    position: relative;
+  }
+  .menu > ul > li > ul > li > ul > li {
+    float: none;
+  }
+  .menu .show-on-mobile {
+    display: block;
+  }
+}
+
+#intro {
+  position: relative;
   z-index: 1;
-  padding: 0px 20px;
+  margin-top: 60px;
+  height: 500px;
+  background-color: #F0F0F0;
+  padding: 10px 0;
+  background-image: url(/images/herd.jpg);
+  background-size: cover;
+  background-attachment: fixed;
 }
-.container div {
-  max-width: 600px;
-  margin: 0 auto;
-  padding-top: 40px;
+
+#name {
+  margin: 50px 0;
+  text-align: center;
+  color: #8b9599;
+  letter-spacing: 1em;
+  -webkit-transition: all 1000ms;
+  -moz-transition: all 1000ms;
+  transition: all 1000ms;
+  -webkit-transition-delay: 300ms;
+  -moz-transition-delay: 300ms;
+  transition-delay: 300ms;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  -o-transform: scale(0.7);
+  transform: scale(0.7);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  text-shadow: 0 0 10px #717c80;
+}
+@media (max-width: 420px) {
+  #name {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
+}
+#name.larger {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+}
+@media (max-width: 420px) {
+  #name {
+    font-size: 20px;
+  }
+}
+#name span {
+  opacity: 0;
+  -webkit-transition: all 500ms;
+  -moz-transition: all 500ms;
+  transition: all 500ms;
+}
+#name span.visible {
+  opacity: 1;
+  text-shadow: none;
+}
+#name span.darker {
+  color: #383f42;
+  font-weight: 700;
+  text-shadow: none;
+}
+
+.section-arrow {
+  position: absolute;
+  bottom: 0;
+  height: 40px;
+  width: 100%;
+  margin-top: 100px;
+}
+.section-arrow > div {
+  float: left;
+  height: 100%;
+}
+
+.block {
+  width: 40%;
+  width: calc(50% - 40px);
+  background-color: white;
+}
+
+.triangle {
+  width: 10%;
+  width: calc(40px);
+  position: relative;
+}
+.triangle:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-style: solid;
+  position: absolute;
+  bottom: 0;
+}
+.triangle.left:after {
+  border-width: 40px 0 0 40px;
+  border-color: transparent transparent transparent white;
+}
+.triangle.right:after {
+  border-width: 0 0 40px 40px;
+  border-color: transparent transparent white transparent;
+}
+
+section {
+  height: 600px;
+}
+
+	body {
+			margin: 0;
+			padding: 0;
+			font-family: 'Lato', sans-serif;
+
+		}
+		
+
+.c-container {
+    margin: auto;
+    width: 93%;
+    position: relative;
+    z-index: 1;
+}
+
+
+.card-view {
+    -webkit-box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    padding: 22px;
+    margin-bottom: 20px;
+	background: #fff;
+}
+.flex-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.spacer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.bg-gray {
+    background: #F8F8F8;
+}
+.no-margin {
+    margin: 0 !important;
+}
+.flex-row .flex-col {
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+/* common css up */
+.timeline {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: relative;
+}
+.timeline li.right {
+    margin-left: auto;
+}
+.timeline li:first-child {
+    margin-top: 0;
+}
+.timeline li {
+    width: 47%;
+    position: relative;
+    margin-top: 50px;
+}
+.timeline:before {
+    content: '';
+    width: 4px;
+    height: 100%;
+    background: #E4E4E4;
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.timeline li:before {
+    content: '';
+    --size: 16px;
+    width: var(--size);
+    height: var(--size);
+    background: #00796B;
+    display: block;
+    position: absolute;
+    left: -48px;
+    border-radius: 50%;
+}
+.time-thumb-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 20px;
+}
+.time-thumb-row .time-content {
+    margin-left: 14px;
+}
+.time-thumb-row .time-content h4 {
+    margin: 0;
+    color: #212121;
+    font-weight: 600;
+    font-size: 17px;
+}
+.time-thumb-row .time-content time {
+    font-size: 14px;
+    color: #666666;
+}
+.timeline li.left:before {
+    left: inherit;
+    right: -48px;
+}
+.width100 {
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+.fade-in[data-scroll] {
+	opacity: 0;
+	will-change: transform, scale, opacity;
+	-webkit-transform: translateY(6rem) scale(0.93);
+			transform: translateY(6rem) scale(0.93);
+	transition: all 1.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+
+.fade-in-right[data-scroll] {
+	opacity: 0;
+	will-change: transform, scale, opacity;
+	-webkit-transform: translatex(6rem) scale(0.93);
+			transform: translatex(6rem) scale(0.93);
+	transition: all 1.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+  .fade-in-left[data-scroll] {
+	opacity: 0;
+	will-change: transform, scale, opacity;
+	-webkit-transform: translatex(-6rem) scale(0.93);
+			transform: translatex(-6rem) scale(0.93);
+	transition: all 1.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+  
+  .fade-in[data-scroll="in"], .fade-in-right[data-scroll="in"] ,.fade-in-left[data-scroll="in"] {
+	opacity: 1;
+	-webkit-transform: translateY(0) scale(1);
+			transform: translateY(0) scale(1);
+  }
+  
+p {
+    color: #5d5d5d;
+    line-height: 1.5;
 }
